Formatting pass, remove unused imports